--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "cron": "^4.4.0",
     "express": "^5.2.1",
+    "node": "^24.12.0",
+    "node-cron": "^4.2.1",
     "pg": "^8.16.3"
   },
   "devDependencies": {
